# Huffman-Archiver

./: CMakeLists.txt  README.md
project/include/: HuffmanArchiver.h  HuffmanBuilder.h  HuffmanTree.h  Reader.h  Writer.h
project/src/: HuffmanArchiver.cpp  HuffmanBuilder.cpp  HuffmanTree.cpp  Reader.cpp  Writer.cpp  main.cpp
test/src/: HuffmanArchiverTests.cpp  HuffmanBuilderTests.cpp  HuffmanTreeTests.cpp  ReaderTests.cpp  WriterTests.cpp
